<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"

    android:minWidth="250dp">

  <TextView
      android:id="@+id/description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"

      android:layout_gravity="center"

      android:text="@string/app_description"
      />

  <TextView
      android:id="@+id/name_version"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:layout_marginTop="8dp"
      android:layout_marginStart="@dimen/activity_horizontal_margin"
      android:layout_marginEnd="@dimen/activity_horizontal_margin"

      android:layout_gravity="center"

      android:gravity="center"

      android:text="@string/app_name"

      android:typeface="monospace"
      android:textSize="12sp"
      android:textColor="@color/black"
      />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="72dp"
    >

  <Button
      android:id="@+id/send_feedback_button"

      android:layout_alignParentBottom="true"
      android:layout_alignParentStart="true"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      style="?android:attr/borderlessButtonStyle"

      android:textColor="@color/text_secondary"

      android:text="@string/send_feedback"
      />

  <Button
      android:id="@+id/close_button"

      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      style="?android:attr/borderlessButtonStyle"

      android:textColor="@color/accent"

      android:text="@string/ok"
      />

  </RelativeLayout>

</LinearLayout>
